[package]
name = "pointillism"
authors = ["Violeta Hernández <vi.hdz.p@gmail.com>"]
categories = ["multimedia", "multimedia::audio"]
description = "A compositional library for musical composition."
edition = "2021"
keywords = ["pointillism", "music", "audio", "modular", "synthesizer"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/vihdzp/pointillism"
version = "0.3.3"

[dependencies]
cfg-if = "1.0"
derive_more = "0.99"
rand = "0.8"

hound = { version = "3.5", optional = true }
cpal = { version = "0.15", optional = true }
human-duration = { version = "0.1.0", optional = true }

[dev-dependencies]
assert_approx_eq = "1.1.0"

[features]
default = ["human-duration", "hound"]
cpal = ["dep:cpal"]

# This only exists so GitHub actions doesn't fail.
github-actions-hack = []
