[package]
name = "pointillism"
authors = ["Violeta Hernández <vi.hdz.p@gmail.com>"]
categories = ["multimedia", "multimedia::audio"]
description = "A compositional library for musical composition."
edition = "2021"
keywords = ["pointillism", "music", "audio", "modular", "synthesizer"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/vihdzp/pointillism"
version = "0.3.6"

[dependencies]
cfg-if = "1.0"
derive_more = "0.99"
rand = "0.8"

cpal = { version = "0.15", optional = true }
hound = { version = "3.5", optional = true }
human-duration = { version = "0.1", optional = true }
midly = { version = "0.5", optional = true }

[dev-dependencies]
assert_approx_eq = "1.1"

[features]
default = ["human-duration", "hound"]
cpal = ["dep:cpal"]
midly = ["dep:midly"]

# This only exists so GitHub actions doesn't fail.
github-actions-hack = []
github-actions = ["cpal", "midly", "github-actions-hack"]
