[package]
name = "pointillism"
authors = ["Violeta Hernández <vi.hdz.p@gmail.com>"]
categories = ["multimedia", "multimedia::audio"]
description = "A compositional library for musical composition."
edition = "2021"
keywords = ["pointillism", "music", "audio", "modular", "synthesizer"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/vihdzp/pointillism"
version = "0.3.7"

[dependencies]
cfg-if = "1.0"
derive_more = "0.99"
rand = "0.8"

cpal = { version = "0.15", optional = true }
hound = { version = "3.5", optional = true }
human-duration = { version = "0.1", optional = true }
midly = { version = "0.5", optional = true }

[dev-dependencies]
assert_approx_eq = "1.1"

[features]
default = ["human-duration", "hound"]
cpal = ["dep:cpal"]
midly = ["dep:midly"]

# Disables some code that won't/can't work on Github actions.
github-actions-hack = []
# All features to test code with.
github-actions-all-features = ["cpal", "midly", "github-actions-hack"]
