[package]
name = "pointillism"
authors = ["Violeta Hernández Palacios <vi.hdz.p@gmail.com>"]
categories = ["multimedia", "multimedia::audio"]
description = "A compositional library for musical composition."
edition = "2021"
keywords = ["pointillism", "music", "audio", "modular", "synthesizer"]
license = "MIT OR Apache-2.0"
readme = "../README.md"
repository = "https://github.com/vihdzp/pointillism"
version = "0.3.7"

[dependencies]
# Required dependencies.
derive_more = "0.99"
rand = "0.8"
macros = { path = "../macros" }

# Optional dependencies.
cpal = { version = "0.15", optional = true }
hound = { version = "3.5", optional = true }
human-duration = { version = "0.1", optional = true }
midly = { version = "0.5", optional = true }

[dev-dependencies]
assert_approx_eq = "1.1"

[features]
default = ["human-duration", "hound"]
cpal = ["dep:cpal"]
midly = ["dep:midly"]

# Disables some code that won't/can't work on Github actions.
github-actions-hack = []
# All features to test code with.
all-features = ["cpal", "midly"]
github-actions-all-features = ["all-features", "github-actions-hack"]

# Basic examples
[[example]]
name = "distortion"
path = "examples/basic/distortion.rs"
[[example]]
name = "epiano"
path = "examples/basic/epiano.rs"
[[example]]
name = "fiveosc"
path = "examples/basic/fiveosc.rs"
[[example]]
name = "harmony"
path = "examples/basic/harmony.rs"
[[example]]
name = "pluck"
path = "examples/basic/pluck.rs"
[[example]]
name = "schroeder"
path = "examples/basic/schroeder.rs"

# Song examples
[[example]]
name = "clair_de_lune"
path = "examples/songs/clair_de_lune.rs"
[[example]]
name = "continuum"
path = "examples/songs/continuum.rs"
[[example]]
name = "primavera_c"
path = "examples/songs/primavera_c.rs"
